deployed contract to georli testnet

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "dotenv": "^10.0.0",
     "ethers": "^5.7.2",
     "hardhat": "^2.8.4",
     "next": "^12.2.5",
@@ -32,7 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
