Start to do testing for contract

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "chai": "^4.3.7",
     "dotenv": "^10.0.0",
     "ethers": "^5.7.2",
     "hardhat": "^2.8.4",
